[package]
name = "mlb-api"
version = "0.1.0"
authors = ["Andrew Schneider <andjschneider@gmail.com>"]
edition = "2024"

[dependencies]
chrono = "0.4.41"
derive_builder = "0.20.2"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.45.1", features = ["macros"] }
