[package]
name = "mlbt-api"
version = "0.4.2"
authors = ["Andrew Schneider <andjschneider@gmail.com>"]
edition = "2024"
description = "Internal API client for mlbt"
license = "MIT"
repository = "https://github.com/mlb-rs/mlbt"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
derive_builder = "0.20.2"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
mockito = "1.7.2"
tokio = { version = "1.52.1", features = ["macros"] }
